--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
 
     <script
@@ -75,6 +75,7 @@
     ></script>
 
     <!-- MAIN JS -->
+    <script src="./js/common.js"></script>
     <script defer src="./js/main.js"></script>
 
     <title>Starbucks Coffee Korea</title>
